--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">BachelorThesisApp</string>
+    <string name="Title">Title</string>
+    <string name="Description">Description</string>
+    <string name="Price">Price</string>
+    <string name="Images">Images</string>
+    <string name="Submit">Submit</string>
+    <string name="Upload">Upload</string>
+    <string name="Time">Time</string>
+    <string name="GuestNumber">Guest number</string>
+    <string name="Budget">Budget</string>
+    <string name="Next">Next</string>
 </resources>
