--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="GuestNumber">Guest number</string>
     <string name="Budget">Budget</string>
     <string name="Next">Next</string>
+    <string name="Previous">Previous</string>
 </resources>
