fixed ui details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="Previous">Previous</string>
     <string name="Name">Name</string>
     <string name="Update">Update</string>
+    <string name="Clear">Clear</string>
 </resources>
