--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="Name">Name</string>
     <string name="Update">Update</string>
     <string name="Clear">Clear</string>
+    <string name="settings">Settings</string>
 </resources>
